<resources>
    <string name="app_name">StopWasteTime</string>
    <string name="app_icon">App_Icon</string>
    <string name="remove">remove</string>
    <string name="addapp">AddApp</string>
    <string name="correct_button">correct button</string>
    <string name="wrong_button">wrong button</string>
    <string name="hey_before_wasting_your_time_have_you_finished_all_your_duties_and_tasks">hey! before wasting your time, have you finished all your duties and tasks?</string>
    <string name="stop_waste_time">STOP WASTE TIME</string>
    <string name="backgroundimage">backgroundImage</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>